--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,26 @@
 body {
-    background-color: rgb(8, 8, 8);
+    background-color: black ;
+}
+
+main {
+    text-align: center;
+    color: white;
+
+}
+
+.flexboxik {
+    display: flex;
+    justify-content: space-around;
+    margin: 1rem auto;
+}
+
+#carouselExampleInterval {
+    width: 40%;
+    margin: 2rem auto;
+}
+
+#carouselExampleInterval img {
+    max-width: 100%;
+    max-height: 40rem;
+    object-fit: cover;
 }
