--- a/styles.css
+++ b/styles.css
@@ -14,12 +14,12 @@ main {
     margin: 1rem auto;
 }
 
-#carouselExampleInterval {
+#carouselExampleSlidesOnly {
     width: 40%;
     margin: 2rem auto;
 }
 
-#carouselExampleInterval img {
+#carouselExampleSlidesOnly img {
     max-width: 100%;
     max-height: 40rem;
     object-fit: cover;
