--- a/styles.css
+++ b/styles.css
@@ -17,10 +17,14 @@ header {
     position: fixed;
     top: 0;
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     width: 100%;
     height: 7rem;
     z-index: 1000;
+}
+
+#hamburger {
+    display: none;
 }
 
 section {
@@ -384,9 +388,101 @@ body {
     display: none;
 }
 
+footer {
+    background: linear-gradient(0deg, rgb(0, 0, 0), rgb(36, 36, 36));
+    color: white;
+    padding: 1rem;
+    margin: 0 auto 3rem auto;
+    width: 100%;
+    height: 5rem;
+}
+
+#footerDiv {
+    margin-top: 1.5rem;
+    text-align: center;
+    display: flex;
+    justify-content:space-evenly;
+    align-items: center;
+}
+
+#telephoneDiv {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+footer span {
+    font-size: 1.5rem;
+    margin-left: 1rem;
+}
+
+footer a i{
+    font-size: 3rem;
+    color: white;
+}
+
+footer i{
+    font-size: 2rem;
+    color: white;
+}
+
+footer a i:hover {
+    color: rgba(63, 205, 160, 0.76);
+    cursor: pointer;
+    scale: 125%;
+    transition: 0.4s ease-out;
+}
+
+footer a i:not(hover) {
+    color: white;
+    scale: 100%;
+    transition: 0.4s ease-out;
+}
+
+
 @media (max-width: 768px) {
+    header {
+        justify-content: space-between;
+        display: block;
+    }
+
+    #LoGo {
+        width: 100%;
+    }
+
+    #page-logo {
+        display: flex;
+        justify-content: space-between;
+        align-content: center;
+    }
+
+    #page-logo a {
+        margin-right: 200px;
+    }
+
     header nav {
+        margin: 0;
+        width: 100%;
         display: none;
+        flex-direction: column;
+        z-index: 1;
+    }
+    
+    header nav ul {
+        display: block;
+    }
+
+    header div {
+        scale: 80%;
+    }
+
+    #hamburger {
+        color: white;
+        display: block;
+        font-size: 2rem;
+        background: none;
+        border: none;
+        cursor: pointer;
     }
     
     .row {
