--- a/styles.css
+++ b/styles.css
@@ -1,548 +1,576 @@
 #icon {
-    border-radius: 2px;
+  border-radius: 2px;
 }
 
 body {
-    background-color: #000000;
-    font-family: "Poppins", "Open Sans", sans-serif;
-    text-align: center;
+  background-color: #000000;
+  font-family: "Poppins", "Open Sans", sans-serif;
+  text-align: center;
+}
+
+li {
+  list-style: none;
 }
 
 header {
-    background: linear-gradient(0deg, rgb(0, 0, 0), rgb(36, 36, 36));
-    color: white;
-    padding: 1rem;
-    margin: 0 auto 3rem auto;
-    text-align: center;
-    position: fixed;
-    top: 0;
-    display: flex;
-    justify-content: space-evenly;
-    width: 100%;
-    height: 7rem;
-    z-index: 1000;
+  background: linear-gradient(0deg, rgb(0, 0, 0), rgb(36, 36, 36));
+  color: white;
+  padding: 1rem;
+  margin: 0 auto 3rem auto;
+  text-align: center;
+  position: fixed;
+  top: 0;
+  display: flex;
+  justify-content: space-evenly;
+  width: 100%;
+  height: 7rem;
+  z-index: 1000;
 }
 
 #hamburger {
-    display: none;
+  display: none;
 }
 
 section {
-    padding-top: 150px;
+  padding-top: 150px;
 }
 
 header.transparent {
-    background: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(36, 36, 36, 0.5));
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(36, 36, 36, 0.5));
 }
 
 header nav {
-    margin: 0 0 0 4rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  margin: 0 0 0 4rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 header nav ul {
-    list-style-type: none;
-    margin: auto;
-    padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  list-style-type: none;
+  margin: auto;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 header nav ul li {
-    margin: 0 3rem;
-    font-size: 2rem;
-    font-weight: 300;
+  margin: 0 3rem;
+  font-size: 2rem;
+  font-weight: 300;
 }
 
 header nav a:hover {
-    color: rgba(63, 205, 160, 0.76);
-    cursor: pointer;
-    transition: 0.4s ease-out;
+  color: rgba(63, 205, 160, 0.76);
+  cursor: pointer;
+  transition: 0.4s ease-out;
 }
 
 header nav li:hover {
-    scale: 110%;
-    transition: 0.4s ease-out;
+  scale: 110%;
+  transition: 0.4s ease-out;
 }
 
 header nav li:not(hover) {
-    scale: 100%;
-    transition: 0.4s ease-out;
+  scale: 100%;
+  transition: 0.4s ease-out;
 }
 
 #page-logo img {
-    height: 100%;
-    scale: 90%;
-    object-fit: contain;
+  height: 100%;
+  scale: 90%;
+  object-fit: contain;
 }
 
 #LoGo:hover {
-    cursor: pointer;
-    transition: scale 0.4s;
-    scale: 115%;
+  cursor: pointer;
+  transition: scale 0.4s;
+  scale: 115%;
 }
 
 #LoGo:not(hover) {
-    cursor: pointer;
-    transition: scale 0.4s;
-    scale: 90%;
+  cursor: pointer;
+  transition: scale 0.4s;
+  scale: 90%;
 }
 
 header a {
-    text-decoration: none;
-    color: white;
+  text-decoration: none;
+  color: white;
 }
 
 main {
-    text-align: center;
-    color: white;
-
+  text-align: center;
+  color: white;
 }
 
 .flexboxik {
-    display: flex;
-    justify-content: space-around;
-    margin: 1rem auto;
+  display: flex;
+  justify-content: space-around;
+  margin: 1rem auto;
 }
 
 main {
-    text-align: center;
-    color: white;
-
+  text-align: center;
+  color: white;
 }
 
 section {
-    margin: 0;
+  margin: 0;
 }
 
 #TELEDYSKI {
-    margin-top: 0;
+  margin-top: 0;
 }
 
 #FOTOGRAFIA {
-    margin: 8rem 0;
+  margin: 8rem 0;
 }
 
 h2 {
-    margin-bottom: 5rem;
-    font-size: 3rem;
-    color: rgba(63, 205, 160, 0.6);
+  margin-bottom: 5rem;
+  font-size: 3rem;
+  color: rgba(63, 205, 160, 0.6);
 }
 
 h3 {
-    margin: 1rem;
+  margin: 1rem;
 }
 
 a {
-    transition: color 0.4s;
-    text-decoration: none;
+  transition: color 0.4s;
+  text-decoration: none;
 }
 
 ol {
-    list-style-type: none;
-    padding: 0;
+  list-style-type: none;
+  padding: 0;
 }
 
 .flexboxik {
-    display: flex;
-    justify-content: space-between;
-    margin: 1rem;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  margin: 1rem;
+  align-items: center;
 }
 
 .flexboxik-napisy {
-    display: flex;
-    justify-content: space-around;
-    margin: 1rem;
-    align-items: center;
+  display: flex;
+  justify-content: space-around;
+  margin: 1rem;
+  align-items: center;
 }
 
 .row {
-    display: flex;
-    justify-content: space-around;
-    margin: 2rem 3rem;
-    height: 32rem;
+  display: flex;
+  justify-content: space-around;
+  margin: 2rem 3rem;
+  height: 32rem;
 }
 
 .col-8 {
-
-    width: 65%;
-
+  width: 65%;
 }
 
 @keyframes slideIn {
-    from {
-        transform: translateX(-100%);
-        opacity: 0;
-    }
+  from {
+    transform: translateX(-100%);
+    opacity: 0;
+  }
 
-    to {
-        transform: translateX(0);
-        opacity: 1;
-    }
+  to {
+    transform: translateX(0);
+    opacity: 1;
+  }
 }
 
 iframe {
-    border-radius: 12px;
-    animation: slideIn 1s ease-out forwards;
-    opacity: 0;
+  border-radius: 12px;
+  animation: slideIn 1s ease-out forwards;
+  opacity: 0;
 }
 
 .slideIn {
-    opacity: 0;
-    transition: opacity 0.75s ease-out, transform 1s ease-out forwards;
+  opacity: 0;
+  transition: opacity 0.75s ease-out, transform 1s ease-out forwards;
 }
 
 .slideIn.visible {
-    animation: slideIn 0.75s ease-out forwards;
+  animation: slideIn 0.75s ease-out forwards;
 }
 
 @keyframes opacityResize {
-    from {
-        opacity: 0;
-        scale: 90%;
-    }
+  from {
+    opacity: 0;
+    scale: 90%;
+  }
 
-    to {
-        opacity: 1;
-        scale: 100%;
-    }
+  to {
+    opacity: 1;
+    scale: 100%;
+  }
 }
 
 .opacityResize {
-    opacity: 0;
-    transition: opacityResize 0.75s ease-out forwards;
+  opacity: 0;
+  transition: opacityResize 0.75s ease-out forwards;
 }
 
 .opacityResize.visible {
-    animation: opacityResize 0.75s ease-out forwards;
+  animation: opacityResize 0.75s ease-out forwards;
 }
 
 @keyframes slideIn-RtoL {
-    from {
-        transform: translateX(100%);
-        opacity: 0;
-    }
+  from {
+    transform: translateX(100%);
+    opacity: 0;
+  }
 
-    to {
-        transform: translateX(0);
-        opacity: 1;
-    }
+  to {
+    transform: translateX(0);
+    opacity: 1;
+  }
 }
 
 .col-4 {
-    animation: slideIn-RtoL 1s ease-out forwards;
-    opacity: 0;
+  animation: slideIn-RtoL 1s ease-out forwards;
+  opacity: 0;
 }
 
 .slideIn2 {
-    opacity: 0;
-    transition: opacity 0.75s ease-out, transform 1s ease-out forwards;
+  opacity: 0;
+  transition: opacity 0.75s ease-out, transform 1s ease-out forwards;
 }
 
 .slideIn2.visible {
-    animation: slideIn-RtoL 0.75s ease-out forwards;
+  animation: slideIn-RtoL 0.75s ease-out forwards;
 }
 
 .col-4 div {
-    margin: 1rem auto;
-    padding: 0.5rem;
-    background-color: black;
-    border-radius: 6px;
+  margin: 1rem auto;
+  padding: 0.5rem;
+  background-color: black;
+  border-radius: 6px;
 }
 
 .col-4 img {
-    max-width: 20%;
-    max-height: 20%;
-    object-fit: cover;
-    border-radius: 5px;
-    margin-right: 0.2rem;
+  max-width: 20%;
+  max-height: 20%;
+  object-fit: cover;
+  border-radius: 5px;
+  margin-right: 0.2rem;
 }
 
 .col-4 a:hover {
-    cursor: pointer;
+  cursor: pointer;
 
-    div {
-        background-color: rgba(66, 135, 113, 0.503);
-        transition: background-color 0.4s;
-    }
+  div {
+    background-color: rgba(66, 135, 113, 0.503);
+    transition: background-color 0.4s;
+  }
 
-    p {
-        scale: 110%;
-        transition: 0.4s;
-    }
-
-    ;
-
+  p {
+    scale: 110%;
+    transition: 0.4s;
+  }
 }
 
 .col-4 a:not(:hover) {
+  div {
+    transition: background-color 0.4s;
+  }
 
-    div {
-        transition: background-color 0.4s;
-    }
-
-    p {
-        transition: 0.4s;
-    }
-
-    ;
-
+  p {
+    transition: 0.4s;
+  }
 }
 
 .col-4 p {
-    color: white;
-    font-size: 1rem;
-    text-align: center;
-    margin-top: 0.7rem;
-    margin: auto;
+  color: white;
+  font-size: 1rem;
+  text-align: center;
+  margin-top: 0.7rem;
+  margin: auto;
 }
 
 .opacityResizePhone {
-    width: 80%;
+  width: 80%;
 }
 
 #carouselExampleSlidesOnly {
-    width: 80%;
-    max-height: 40rem;
-    object-fit: cover;
-    margin: 2rem auto;
+  width: 80%;
+  max-height: 40rem;
+  object-fit: cover;
+  margin: 2rem auto;
 }
 
 #carouselExampleSlidesOnly img {
-    max-width: 100%;
-    max-height: 40rem;
-    object-fit: cover;
-    border-radius: 12px;
+  max-width: 100%;
+  max-height: 40rem;
+  object-fit: cover;
+  border-radius: 12px;
 }
 
 #FAQ {
-    max-width: 75%;
-    margin: 0 auto;
+  max-width: 75%;
+  margin: 0 auto;
 }
 
 #FAQ ul {
-    list-style: none;
-    padding: 0;
+  list-style: none;
+  padding: 0;
 }
 
 #FAQ h3 {
-    font-weight: 600;
-    font-size: 1.5rem;
+  font-weight: 600;
+  font-size: 1.5rem;
 }
 
 #FAQ p {
-    font-size: 1.1rem;
+  font-size: 1.1rem;
 }
 
 hr {
-    height: 5px;
-    background-color: #8c8c8c;
-    border: none;
-    margin: 1.5rem auto;
-    border-radius: 2px;
+  height: 5px;
+  background-color: #8c8c8c;
+  border: none;
+  margin: 1.5rem auto;
+  border-radius: 2px;
 }
 
 /* For the entire scrollbar */
 ::-webkit-scrollbar {
-    width: 14px;
-    /* Width of the scrollbar */
+  width: 14px;
+  /* Width of the scrollbar */
 }
 
 /* For the scrollbar track */
 ::-webkit-scrollbar-track {
-    background: #3a3a3a;
-    /* Slightly lighter color for the track */
-    border-radius: 6px;
-    /* Rounded corners for a smoother look */
+  background: #3a3a3a;
+  /* Slightly lighter color for the track */
+  border-radius: 6px;
+  /* Rounded corners for a smoother look */
 }
 
 /* For the scrollbar thumb */
 ::-webkit-scrollbar-thumb {
-    background: #555;
-    /* Medium color for the thumb */
-    border-radius: 6px;
-    /* Rounded corners */
-    border: 2px solid #3a3a3a;
-    /* Border to give a more defined look */
+  background: #555;
+  /* Medium color for the thumb */
+  border-radius: 6px;
+  /* Rounded corners */
+  border: 2px solid #3a3a3a;
+  /* Border to give a more defined look */
 }
 
 /* For the scrollbar thumb on hover */
 ::-webkit-scrollbar-thumb:hover {
-    background: #777;
-    /* Slightly lighter color on hover */
+  background: #777;
+  /* Slightly lighter color on hover */
 }
 
 /* Firefox scrollbar styles */
 body {
-    scrollbar-width: auto;
-    /* Width of the scrollbar */
-    scrollbar-color: #555 #3a3a3a;
-    /* Color of the thumb and track */
+  scrollbar-width: auto;
+  /* Width of the scrollbar */
+  scrollbar-color: #555 #3a3a3a;
+  /* Color of the thumb and track */
 }
 
 .toBeAdded {
-    display: none;
+  display: none;
 }
 
 footer {
-    background: linear-gradient(0deg, rgb(0, 0, 0), rgb(36, 36, 36));
-    color: white;
-    padding: 1rem;
-    margin: 0 auto 3rem auto;
-    width: 100%;
-    height: 5rem;
+  background: linear-gradient(0deg, rgb(0, 0, 0), rgb(36, 36, 36));
+  color: white;
+  padding: 1rem;
+  margin: 0 auto 3rem auto;
+  width: 100%;
+  height: 5rem;
 }
 
 #footerDiv {
-    margin-top: 1.5rem;
-    text-align: center;
-    display: flex;
-    justify-content:space-evenly;
-    align-items: center;
+  margin-top: 1.5rem;
+  text-align: center;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 #telephoneDiv {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 footer span {
-    font-size: 1.5rem;
-    margin-left: 1rem;
+  font-size: 1.5rem;
+  margin-left: 1rem;
 }
 
-footer a i{
-    font-size: 3rem;
-    color: white;
+footer a i {
+  font-size: 3rem;
+  color: white;
 }
 
-footer i{
-    font-size: 2rem;
-    color: white;
+footer i {
+  font-size: 2rem;
+  color: white;
 }
 
 footer a i:hover {
-    color: rgba(63, 205, 160, 0.76);
-    cursor: pointer;
-    scale: 125%;
-    transition: 0.4s ease-out;
+  color: rgba(63, 205, 160, 0.76);
+  cursor: pointer;
+  scale: 125%;
+  transition: 0.4s ease-out;
 }
 
 footer a i:not(hover) {
-    color: white;
-    scale: 100%;
-    transition: 0.4s ease-out;
+  color: white;
+  scale: 100%;
+  transition: 0.4s ease-out;
 }
 
+/* Mobile menu */
+
+.mobile-menu {
+  display: none;
+}
 
 @media (max-width: 768px) {
-    header {
-        justify-content: space-between;
-        display: block;
-    }
+  header {
+    justify-content: space-between;
+    display: block;
+  }
 
-    #LoGo {
-        width: 100%;
-    }
+  #LoGo {
+    width: 150px;
+  }
 
-    #page-logo {
-        display: flex;
-        justify-content: space-between;
-        align-content: center;
-    }
+  #page-logo {
+    display: flex;
+    justify-content: space-between;
+    align-content: center;
+  }
 
+  #page-logo a {
+    margin-right: 200px;
+  }
 
+  header #nav-links {
+    display: none;
+  }
 
-    #page-logo a {
-        margin-right: 200px;
-    }
+  header div {
+    scale: 80%;
+  }
 
-    header nav {
-        margin: 0;
-        width: 100%;
-        display: none;
-        flex-direction: column;
-        z-index: 1;
-    }
-    
-    header nav ul {
-        display: block;
-    }
+  #hamburger {
+    color: white;
+    display: block;
+    font-size: 2rem;
+    background: none;
+    border: none;
+    cursor: pointer;
+  }
 
-    header div {
-        scale: 80%;
-    }
+  .row {
+    justify-content: center;
+  }
 
-    #hamburger {
-        color: white;
-        display: block;
-        font-size: 2rem;
-        background: none;
-        border: none;
-        cursor: pointer;
-    }
-    
-    .row {
-        justify-content: center;
-    }
+  .col-8 {
+    margin-top: -50px;
+    width: 130%;
+  }
 
-    .col-8 {
-        margin-top: -50px;
-        width: 130%;
-    }
+  .col-4 {
+    width: 130%;
+  }
 
-    .col-4 {
-        width: 130%;
-    }
+  .col-4 div {
+    width: 100%;
+  }
 
-    .col-4 div{
-        width: 100%;
-    }
+  .col-4 p {
+    text-align: center;
+  }
 
-    .col-4 p {
-        text-align: center;
-    }
+  .col-4 img {
+    max-width: 30%;
+    max-height: 30%;
+    object-fit: cover;
+    margin-right: 0.8rem;
+  }
 
-    .col-4 img {
-        max-width: 30%;
-        max-height: 30%;
-        object-fit: cover;
-        margin-right: 0.8rem;
-    }
+  #FOTOGRAFIA .flexboxik-napisy {
+    display: block;
+  }
 
-    #FOTOGRAFIA .flexboxik-napisy {
-        display: block;
-    }
+  #FOTOGRAFIA .flexboxik {
+    display: block;
+  }
 
-    #FOTOGRAFIA .flexboxik {
-        display: block;
-    }
+  .toDissapear {
+    display: none;
+  }
 
-    .toDissapear {
-        display: none;
-    }
+  .toBeAdded {
+    display: block;
+  }
 
-    .toBeAdded {
-        display: block;
-    }
+  .opacityResize {
+    transition: none;
+  }
 
-    .opacityResize {
-        transition: none;
-    }
+  .opacityResizePhone {
+    width: 100%;
+    opacity: 0;
+    transition: opacityResize 0.75s ease-out forwards;
+  }
 
-    .opacityResizePhone {
-        width: 100%;
-        opacity: 0;
-        transition: opacityResize 0.75s ease-out forwards;
-    }
+  .opacityResizePhone.visible {
+    animation: opacityResize 0.75s ease-out forwards;
+  }
 
-    .opacityResizePhone.visible {
-        animation: opacityResize 0.75s ease-out forwards;
-    }
+  .mobile-menu {
+    display: block;
+    position: fixed;
+    z-index: 1000;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #000;
 
+    transform: translateX(100%);
+    transition: transform 0.3s ease-in-out;
+  }
+
+  .show-mobile {
+    transform: translateX(0);
+  }
+
+  .mobile-menu-list {
+    padding-top: 5rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+  }
+
+  .mobile-menu-list a {
+    color: rgb(63, 205, 160);
+    font-size: 1.5rem;
+  }
+
+  .mobile-menu-close {
+    position: absolute;
+    top: 1rem;
+    right: 1.5rem;
+
+    background: transparent;
+    border: transparent;
+    color: rgb(63, 205, 160);
+    font-size: 2rem;
+  }
 }
