--- a/styles.css
+++ b/styles.css
@@ -105,6 +105,7 @@ main {
   color: white;
 }
 
+
 .flexboxik {
   display: flex;
   justify-content: space-around;
@@ -121,11 +122,13 @@ section {
 }
 
 #TELEDYSKI {
-  margin-top: 0;
+  margin: 0 auto;
+  max-width: 1800px;
 }
 
 #FOTOGRAFIA {
-  margin: 8rem 0;
+  margin: 8rem auto;
+  max-width: 1800px;
 }
 
 h2 {
@@ -313,8 +316,9 @@ iframe {
 }
 
 #FAQ {
-  max-width: 75%;
+  width: 75%;
   margin: 0 auto;
+  max-width: 1800px;
 }
 
 #FAQ ul {
