--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@ header.transparent {
 }
 
 header nav {
-  margin: 0 0 0 4rem;
+  margin: 0;
   display: flex;
   justify-content: center;
   align-items: center;
