--- a/styles.css
+++ b/styles.css
@@ -399,17 +399,17 @@ footer {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+  padding-bottom: 1.5rem;
 }
 
 #telephoneDiv {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  display: block;
+  text-align: center;
+  max-width: 32rem;
 }
 
 footer span {
-  font-size: 1.5rem;
-  margin-left: 1rem;
+  font-size: 1rem;
 }
 
 footer a i {
@@ -618,6 +618,10 @@ footer a i:not(hover) {
 
   .opacityResizePhone.visible {
     animation: opacityResize 0.75s ease-out forwards;
+  }
+
+  #telephoneDiv{
+    max-width: 15rem;
   }
 
   .mobile-menu {
