--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,15 @@
   border-radius: 2px;
 }
 
+html {
+  position: relative;
+  width: 100%;
+}
+
 body {
+  overflow-x: hidden;
+  position: relative;
+  width: 100%;
   background-color: #000000;
   font-family: "Poppins", "Open Sans", sans-serif;
   text-align: center;
@@ -13,7 +21,7 @@ li {
 }
 
 header {
-  background: linear-gradient(0deg, rgb(0, 0, 0), rgb(36, 36, 36));
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(36, 36, 36, 0.5));
   color: white;
   padding: 1rem;
   margin: 0 auto 3rem auto;
@@ -29,10 +37,6 @@ header {
 
 section {
   padding-top: 150px;
-}
-
-header.transparent {
-  background: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(36, 36, 36, 0.5));
 }
 
 header nav {
@@ -388,9 +392,8 @@ footer {
   background: linear-gradient(0deg, rgb(0, 0, 0), rgb(36, 36, 36));
   color: white;
   padding: 1rem;
-  margin: 0 auto 3rem auto;
+  margin: 0 auto 0 auto;
   width: 100%;
-  height: 5rem;
 }
 
 #footerDiv {
@@ -446,9 +449,9 @@ footer a i:not(hover) {
 }
 
 @media (max-width: 768px) {
-  main {
+  /* main {
     overflow-x: hidden;
-  }
+  } */
 
   header {
     justify-content: space-between;
@@ -604,9 +607,9 @@ footer a i:not(hover) {
   .opacityResize {
     transition: none;
     position: relative;
-    width: 120%;
-    left: 50%;
-    transform: translateX(-50%);
+    width: 100%;
+    left: 0;
+    transform: none;
   }
 
   .opacityResizePhone {
@@ -620,7 +623,7 @@ footer a i:not(hover) {
     animation: opacityResize 0.75s ease-out forwards;
   }
 
-  #telephoneDiv{
+  #telephoneDiv {
     max-width: 15rem;
   }
 
